--- a/src/main/webapp/templates/limpa.xhtml
+++ b/src/main/webapp/templates/limpa.xhtml
@@ -6,11 +6,13 @@
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
+     
 </h:head>
 <h:body>
 	<h:form>
 		</p:tabView>
+	<h:outputText value="Teste"></h:outputText>
+	
 	</h:form>
 </h:body>
 </html>
