--- a/src/main/webapp/templates/limpa.xhtml
+++ b/src/main/webapp/templates/limpa.xhtml
@@ -12,6 +12,7 @@
 	<h:form>
 		</p:tabView>
 	<h:outputText value="Teste"></h:outputText>
+	<h:outputText value="Novo teste"></h:outputText>
 	
 	</h:form>
 </h:body>
