--- a/src/main/webapp/templates/limpa.xhtml
+++ b/src/main/webapp/templates/limpa.xhtml
@@ -13,6 +13,7 @@
 		</p:tabView>
 	<h:outputText value="Teste"></h:outputText>
 	<h:outputText value="Novo teste"></h:outputText>
+	<h:outputText value="terceiro teste"></h:outputText>
 	
 	</h:form>
 </h:body>
