Change-Id: Ide6d7518d92d0ea33ec46e66ced43497d9d31740

--- a/src/main/webapp/resources/css/sistema.css
+++ b/src/main/webapp/resources/css/sistema.css
@@ -126,3 +126,11 @@ footer {
 	padding: 0px !important;
 }
 
+
+.menu-sistema{
+	border: 0px !important;
+	padding: opx !important;
+	background: none !important;
+}
+
+.menu-sistema .ui-menu-parent > a .ui.menuitem-text, .menu-sistema > .ui-menu-list > .ui-menuitem > a > .ui-menu
